--- a/public/documentation.html
+++ b/public/documentation.html
@@ -14,7 +14,7 @@
     </style>
   </head>
   <body>
-    <redoc spec-url='http://api_staging.procstudio.com.br/openapi.yaml'></redoc>
+    <redoc spec-url='https://api_staging.procstudio.com.br/openapi.yaml'></redoc>
     <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"> </script>
   </body>
 </html>
